--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "react-component-test",
-  "version": "1.0.0",
-  "description": "Test react components",
+  "name": "components-ie",
+  "version": "1.0.1",
+  "description": "Test components",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JamesJJT/react-component-test.git"
-  },
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "^2.7.0"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JamesJJT/react-component-test/issues"
+  "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7"
   },
-  "homepage": "https://github.com/JamesJJT/react-component-test#readme"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JamesJJT/components-ie.git"
+  },
+  "author": "",
+  "license": "ISC"
 }
